# sabledocs

./: .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  datastore.pb  description copy.json  descriptor.pb  docs.html  generate_sample_docs.sh  google.datastore.v1.html  google.pubsub.v1.html  index.html  mystyles.css  package-lock.json  package.json  proto_descriptor_parser.py  proto_json_parser.py  proto_model.py  pubsub.pb  pyproject.toml  requirements.txt  sable-test.pb  sable.py  sable.test.v1.html  sable.toml  sable_config.py  sabledocs.toml  travix.postsale.common.v1.html  travix.postsale.postsaleapi.v1.html  travix.postsale.producthub.baggagehub.v1.html  travix.postsale.producthub.common.v1.html  travix.postsale.shoppingcart.v1.html
.circleci/: config.yml
demo/: google.datastore.v1.html  google.pubsub.v1.html  index.html  search.html
demo/static/: mystyles.css  theme.js
docker/alpine/: Dockerfile
docker/bookworm/: Dockerfile
docker/slim/: Dockerfile
output/: google.datastore.v1.html  index.html
sample/: custom_comments_parser.py  datastore.pb  descriptor.pb  google-cloud-sdk.pb  intro.md  pubsub.pb  sable-test.pb  sable-test.proto  sabledocs.toml
sample/output/: google.datastore.v1.html  google.pubsub.v1.html  index.html  search.html
sass/: mystyles.scss
src/sable/: proto_descriptor_parser.py  sable.py
src/sabledocs/: __main__.py  comments_parser.py  example-content.txt  example-index.json  lunr_search.py  proto_descriptor_parser.py  proto_model.py  requirements.txt  sable_config.py
src/sabledocs/templates/_default/: base.html  enum.html  index.html  message.html  package.html  search.html  service.html  type_name.html
src/sabledocs/templates/_default/static/: mystyles.css
templates/: base.html  base.html.jinja  docs.html.jinja  enum.html  enum.html.jinja  index.html  message.html  message.html.jinja  package.html  package.html.jinja  service.html  service.html.jinja  type_name.html
templates/_default/: base.html  index.html  message.html  package.html  service.html  type_name.html
tests/: test_proto_descriptor_parser.py
tmpdocs/: travix.postsale.shoppingcart.v1.html
