[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sabledocs"
version = "0.3"
authors = [
  { name="Mark Vincze", email="mrk.vincze@gmail.com" },
]
description = "Static documentation generator for Protobuf and gRPC"
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
  "Jinja2==3.1.2",
  "Markdown==3.4.1",
  "protobuf==4.21.6",
  "lunr==0.6.2",
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/markvincze/sabledocs"
"Bug Tracker" = "https://github.com/markvincze/sabledocs/issues"

[project.scripts]
sabledocs = "sabledocs.__main__:cli"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools]
include-package-data = true

